[metadata]
name = pep517
version = 0.12.0
description = Wrappers to build Python packages using PEP 517 hooks
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Thomas Kluyver
author_email = thomas@kluyver.me.uk
license = MIT
license_file = LICENSE
url = https://github.com/pypa/pep517
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    tomli >= 1.1.0
    importlib_metadata;python_version < "3.8"
    zipp;python_version < "3.8"
python_requires = >=3.6
